--- a/public/css/product.css
+++ b/public/css/product.css
@@ -78,7 +78,7 @@ main {
   display: block;
 }
 
-.form-control input {
+.form-control input, textarea {
   width: 100%;
   padding: 0.8rem;
   font-size: 1rem;
@@ -87,7 +87,7 @@ main {
   transition: border 0.3s, box-shadow 0.3s;
 }
 
-.form-control input:focus {
+.form-control input:focus, #description:focus {
   border-color: #4caf50;
   box-shadow: 0 0 5px rgba(76, 175, 80, 0.5);
   outline: none;
