--- a/views/admin/all-products.ejs
+++ b/views/admin/all-products.ejs
@@ -1,11 +1,11 @@
-<%- include('includes/head.ejs') %>
+<%- include('../includes/head.ejs') %>
     <link rel="stylesheet" href="/css/shop.css" />
   </head>
 
   <body>
-    <%- include('includes/navigation.ejs') %>
+    <%- include('../includes/navigation.ejs') %>
 
-    <% if (prods.length > 0) { %>
+    <% if (hasProduct) { %>
       <main>
         <h1>My Products</h1>
         <p>List of all the products...</p>
@@ -13,15 +13,18 @@
           <% for (let product of prods) { %>
             <li>
               <img
-                src="https://ix-marketing.imgix.net/case-study-image_chronext.png?auto=format,compress&w=1074"
+                src="<%= product.imageUrl %>"
                 alt="product-watch"
                 class="product-image"
               />
               <div class="product-details">
                 <h2 class="product-title"><%= product.title %></h2>
-                <p class="product-price">$19.99</p>
-                <p class="product-description">This is a luxurious watch of the CR7 brand</p>
-                <a href="#" class="add-to-cart-btn">Add to Cart</a>
+                <p class="product-price">$<%= product.price %></p>
+                <p class="product-description"><%= product.description %></p>
+                <div class="button">
+                  <a href="#" class="add-to-cart-btn">Edit</a>
+                  <a href="#" class="add-to-cart-btn">Delete</a>
+                </div>
               </div>
             </li>
           <% } %>
@@ -31,4 +34,4 @@
       <h2>No Products</h2>
       <p>Sorry, there are no products available at the moment.</p>
     <% } %>
-<%- include('includes/end.ejs') %>
+<%- include('../includes/end.ejs') %>
