chore: introduction to SQL for storing products and cart data

--- a/views/admin/all-products.ejs
+++ b/views/admin/all-products.ejs
@@ -22,8 +22,11 @@
                 <p class="product-price">$<%= product.price %></p>
                 <p class="product-description"><%= product.description %></p>
                 <div class="button">
-                  <a href="#" class="add-to-cart-btn">Edit</a>
-                  <a href="#" class="add-to-cart-btn">Delete</a>
+                  <a href="/edit-product?productId=<%= product.id %>" class="add-to-cart-btn">Edit</a>
+                  <form action="/delete-product" method="POST" style="display: inline;">
+                    <input type="hidden" name="productId" value="<%= product.id %>" />
+                    <button type="submit" class="add-to-cart-btn">Delete</button>
+                  </form>
                 </div>
               </div>
             </li>
