--- a/public/css/shop.css
+++ b/public/css/shop.css
@@ -83,8 +83,7 @@ p {
 /* Product Grid */
 main ul {
   display: grid;
-  /* grid-column: 3; */
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(2, minmax(250px, 1fr)); 
   gap: 1.5rem;
   list-style: none;
   padding: 0;
