--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -21,7 +21,10 @@
                 <h2 class="product-title"><%= product.title %></h2>
                 <p class="product-price">$<%= product.price %></p>
                 <p class="product-description"><%= product.description %></p>
-                <a href="#" class="add-to-cart-btn">Add to Cart</a>
+                <form action="/carts" method="POST">
+                  <button type="submit" class="add-to-cart-btn">Add to Cart</button>
+                  <input type="hidden" name="productId" value="<%= product.id %>">
+                </form>              
               </div>
             </li>
           <% } %>
