--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -23,8 +23,9 @@
                 <p class="product-description"><%= product.description %></p>
                 <div class="button">
                   <a href="/products/<%= product.id %>" class="add-to-cart-btn">Details</a>
-                  <form action="/add-to-cart" method="POST">
+                  <form action="/carts" method="POST">
                     <button type="submit" class="add-to-cart-btn">Add to Cart</button>
+                    <input type="hidden" name="productId" value="<%= product.id %>">
                   </form>
                 </div>
               </div>
