--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -6,9 +6,9 @@
 <%- include('../includes/navigation.ejs') %>
 
 <main>
-  <form class="product-form" action="/edit-product" method="POST">
+  <form class="product-form" action="/edit-product/<%= product._id %>" method="POST">
 
-    <input type="hidden" name="productId" value="<%= product.id %>">
+    <input type="hidden" name="productId" value="<%= product._id %>">
     
     <div class="form-control">
       <label for="title">Title</label>
