--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -22,10 +22,10 @@
                 <p class="product-price">$<%= product.price %></p>
                 <p class="product-description"><%= product.description %></p>
                 <div class="button">
-                  <a href="/products/<%= product.id %>" class="add-to-cart-btn">Details</a>
+                  <a href="/products/<%= product._id %>" class="add-to-cart-btn">Details</a>
                   <form action="/carts" method="POST">
                     <button type="submit" class="add-to-cart-btn">Add to Cart</button>
-                    <input type="hidden" name="productId" value="<%= product.id %>">
+                    <input type="hidden" name="productId" value="<%= product._id %>">
                   </form>
                 </div>
               </div>
