--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -17,7 +17,7 @@
                 <ul style="padding: 10px;">
                   <% for (let product of order.items) { %>
                     <li style="padding: 5px;">
-                      <%= product.title %> (<%= product.qty %>) - $<%= product.price %>
+                      <%= product.title %> (<%= product.quantity %>) - $<%= product.price %>
                     </li>
                   <% } %>
                 </ul>
