--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -6,28 +6,28 @@
 <%- include('../includes/navigation.ejs') %>
 
 <main>
-  <form class="product-form" action="/edit-product/<%= product._id %>" method="POST">
+  <form class="product-form" action="/edit-product/<%= product[0]._id %>" method="POST">
 
-    <input type="hidden" name="productId" value="<%= product._id %>">
+    <input type="hidden" name="productId" value="<%= product[0]._id %>">
     
     <div class="form-control">
       <label for="title">Title</label>
-      <input type="text" name="title" id="title" value="<%= product.title %>" />
+      <input type="text" name="title" id="title" value="<%= product[0].title %>" />
     </div>
     
     <div class="form-control">
       <label for="imageUrl">Image URL</label>
-      <input type="text" name="imageUrl" id="imageUrl" value="<%= product.imageUrl %>" />
+      <input type="text" name="imageUrl" id="imageUrl" value="<%= product[0].imageUrl %>" />
     </div>
     
     <div class="form-control">
       <label for="price">Price</label>
-      <input type="number" name="price" id="price" step="0.01" value="<%= product.price %>" />
+      <input type="number" name="price" id="price" step="0.01" value="<%= product[0].price %>" />
     </div>
     
     <div class="form-control">
       <label for="description">Description</label>
-      <textarea name="description" id="description" rows="5"><%= product.description %></textarea>
+      <textarea name="description" id="description" rows="5"><%= product[0].description %></textarea>
     </div>
 
     <button type="submit">Save</button>
