--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -11,18 +11,18 @@
         <ul>
           <% for (let product of products) { %>
             <li>
-              <%= product.title %> (<%= product.qty %>) - $<%= product.price %>
+              <%= product.title %> (<%= product.quantity %>) - $<%= product.price %>
               <div class="quantity-controls">
                 <form action="/carts" method="POST">
                   <input type="hidden" name="productId" value="<%= product._id %>">
                   <input type="hidden" name="action" value="decrease">
-                  <button type="submit" <%= product.qty === 1 ? 'disabled' : '' %>>-</button>
+                  <button type="submit" <%= product.quantity === 1 ? 'disabled' : '' %>>-</button>
                 </form>
                 <form action="/carts" method="POST">
                   <input type="hidden" name="productId" value="<%= product._id %>">
                   <input type="hidden" name="action" value="increase">
                   <button type="submit">+</button>
-                </form>
+                </form>                
               </div>
               <form action="/remove-from-cart" method="POST">
                 <input type="hidden" name="productId" value="<%= product._id %>">
