--- a/public/css/shop.css
+++ b/public/css/shop.css
@@ -26,6 +26,8 @@ body {
 .main-header__nav {
   max-width: 1200px;
   width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
 .main-header__item-list {
