--- a/public/css/shop.css
+++ b/public/css/shop.css
@@ -48,6 +48,15 @@ body {
   transition: background 0.3s, color 0.3s;
 }
 
+.main-header__item button {
+  background:  transparent;
+  color: white;
+  border: none;
+  font-weight: bold;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
 .main-header__item a:hover,
 .main-header__item a.active {
   background-color: #388e3c;
