--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -1,5 +1,7 @@
 <%- include('../includes/head.ejs') %>
     <link rel="stylesheet" href="/css/product.css">
+    <link rel="stylesheet" href="/css/shop.css" />
+<link rel="stylesheet" href="/css/cart.css" />
   </head>
 
   <body>
