--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -21,10 +21,12 @@
                 <h2 class="product-title"><%= product.title %></h2>
                 <p class="product-price">$<%= product.price %></p>
                 <p class="product-description"><%= product.description %></p>
-                <form action="/carts" method="POST">
-                  <button type="submit" class="add-to-cart-btn">Add to Cart</button>
-                  <input type="hidden" name="productId" value="<%= product._id %>">
-                </form>              
+                <% if (isAuthenticated) { %>
+                  <form action="/carts" method="POST">
+                    <button type="submit" class="add-to-cart-btn">Add to Cart</button>
+                    <input type="hidden" name="productId" value="<%= product._id %>">
+                  </form>              
+                <% } %>
               </div>
             </li>
           <% } %>
