--- a/views/shop/product-details.ejs
+++ b/views/shop/product-details.ejs
@@ -16,10 +16,12 @@
           <h2 class="product-title"><%= product[0].title %></h2>
           <p class="product-price">$<%= product[0].price %></p>
           <p class="product-description"><%= product[0].description %></p>
-          <form action="/carts" method="POST">
-            <button type="submit" class="add-to-cart-btn">Add to Cart</button>
-            <input type="hidden" name="productId" value="<%= product.id %>">
-          </form>
+          <% if (isAuthenticated) { %>
+            <form action="/carts" method="POST">
+              <button type="submit" class="add-to-cart-btn">Add to Cart</button>
+              <input type="hidden" name="productId" value="<%= product.id %>">
+            </form>
+          <% } %>
         </div>
       </li>
     </ul>
